--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,9 +1,7 @@
 <ion-content padding class="startLogin">
-	<br />
 	<div text-center>
-		<ion-img width="200" height="200" src="./assets/imgs/login4.png"></ion-img>
+		<ion-img width="150" height="150" src="./assets/imgs/login4.png"></ion-img>
 	</div>
-	<br />
 	<ion-list>
 		<ion-item>
 			<ion-label floating>Email</ion-label>
@@ -19,13 +17,11 @@
 	</div>
 	<br />
 	<div text-center>
-		<ion-icon name="ios-arrow-dropdown-circle" class="or"></ion-icon>
-	</div>
-	<br />
-	<div text-center>
 		<ion-label>Sign In with:</ion-label>
 		<button ion-button (click)="facebooklogin()"><ion-icon name="logo-facebook"></ion-icon></button>
 		<button ion-button (click)="googlelogin()"><ion-icon name="logo-googleplus"></ion-icon></button>
 	</div>
-	<br/><p (click)="register();"><u>Don't have an account?</u></p>
+	<br/>
+	<p (click)="register();"><u>Don't have an account?</u></p>
 </ion-content>
+
